QPID-XXX: Set project language to CXX in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-project(qpid-cpp CXX)
+project(qpid-cpp LANGUAGES CXX)
 
 if (NOT MSVC)
   cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
